; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_amdgpu_psp.c_psp_prep_ras_ta_unload_cmd_buf.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_amdgpu_psp.c_psp_prep_ras_ta_unload_cmd_buf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.psp_gfx_cmd_resp = type { %struct.TYPE_4__, i32 }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@GFX_CMD_ID_UNLOAD_TA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.psp_gfx_cmd_resp*, i32)* @psp_prep_ras_ta_unload_cmd_buf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @psp_prep_ras_ta_unload_cmd_buf(%struct.psp_gfx_cmd_resp* %0, i32 %1) #0 {
  %3 = alloca %struct.psp_gfx_cmd_resp*, align 8
  %4 = alloca i32, align 4
  store %struct.psp_gfx_cmd_resp* %0, %struct.psp_gfx_cmd_resp** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @GFX_CMD_ID_UNLOAD_TA, align 4
  %6 = load %struct.psp_gfx_cmd_resp*, %struct.psp_gfx_cmd_resp** %3, align 8
  %7 = getelementptr inbounds %struct.psp_gfx_cmd_resp, %struct.psp_gfx_cmd_resp* %6, i32 0, i32 1
  store i32 %5, i32* %7, align 4
  %8 = load i32, i32* %4, align 4
  %9 = load %struct.psp_gfx_cmd_resp*, %struct.psp_gfx_cmd_resp** %3, align 8
  %10 = getelementptr inbounds %struct.psp_gfx_cmd_resp, %struct.psp_gfx_cmd_resp* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  store i32 %8, i32* %12, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
